<resources>
    <string name="app_name">课上课下</string>
    <string name="username">账户：</string>
    <string name="password">密码：</string>
    <string name="hint_userName">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="action_login">登陆</string>
    <string name="app_exit_again">再按一次退出程序</string>
    <string name="main_title">课堂</string>
    <string name="classroom">课堂</string>
    <string name="homework">作业</string>
    <string name="recommend">推荐作业</string>
    <string name="material">课外素材</string>
    <string name="count">统计</string>
    <string name="mine">我</string>
    <string name="_mine">个人信息</string>
    <string name="mine_version">版本号：</string>
    <string name="mine_teacher">教师信息</string>
    <string name="mine_contract">联系我们</string>
    <string name="mine_head">头像</string>
    <string name="mine_name">用户名</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_password">密码</string>
    <string name="mine_tel">电话</string>
    <string name="mine_qq">QQ</string>
    <string name="mine_email">邮箱</string>
    <string name="dialog_tip">提示</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="mine_nickname_tip">请输入昵称</string>
    <string name="mine_tel_tip">请输入电话</string>
    <string name="mine_email_tip">请输入邮箱</string>
    <string name="mine_qq_tip">请输入qq</string>
    <string name="copy_right">思教科技（北京）有限公司</string>
    <string name="mine_use">使用反馈</string>
    <string name="mine_customer">客户热线</string>
    <string name="mine_http">官网地址</string>
    <string name="mine_customer_tel">010–56626036</string>
    <string name="mine_http_d">http://www.sijiaokeji.com</string>
    <string name="mine_notice">通知</string>
    <string name="mine_time">发布时间：</string>
    <string name="mine_push_name">发布人：</string>
    <string name="mine_push_content">消息内容：</string>
    <string name="classroom_name">课堂名称：</string>
    <string name="classroom_time">创建时间：</string>
    <string name="classroom_content">课堂描述：</string>
    <string name="add_noraml">普通作业</string>
    <string name="add_error">错题作业</string>
    <string name="classroom_detail">课堂详情</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="iv_load_fail">图片加载失败</string>
    <string name="please_answer">请作答：</string>
    <string name="please_res">请订正：</string>
    <string name="please_caclu">演草</string>
    <string name="note">笔记</string>
    <string name="msg">留言</string>
    <string name="submit">提交</string>
    <string name="previous">上一页</string>
    <string name="next">下一页</string>
    <string name="answers">答案：</string>
    <string name="answer">答案</string>
    <string name="go_revised">去校对</string>
    <string name="analysis">解析：</string>
    <string name="question_type">题型</string>
    <string name="question_diff">难度</string>
    <string name="question_know">知识点：</string>
    <string name="student_answer">学生回答：</string>
    <string name="student_answer_1">我的作答：</string>
    <string name="self_revised">自我校对</string>
    <string name="student_res">请订正：</string>
    <string name="student_res_1">已订正：</string>
    <string name="student_answer_null">未作答，点击作答</string>
    <string name="student_answer_null_">未作答</string>
    <string name="student_answer_null_revised_">未作答，点击订正</string>
    <string name="student_revised_null_">未订正</string>
    <string name="student_revised_null_click_">未订正，点击订正</string>
    <string name="student_answer_notnull">已做答，点击查看</string>
    <string name="student_answer_revised">已做答，点击订正</string>
    <string name="student_revised_correct">已订正，点击校对</string>
    <string name="student_revised">已订正，点击查看</string>
    <string name="answers_right_rate">班级正确率：</string>
    <string name="image_look">图片查看</string>
    <string name="assign_hw">布置作业</string>
    <string name="file_open">打开</string>
    <string name="file_download">下载</string>
    <string name="file_pause">暂停</string>
    <string name="file_error">错误</string>
    <string name="emptyView_mode_desc_fail_title">加载失败</string>
    <string name="emptyView_mode_desc_fail_desc">请检测网络是否能正常连接</string>
    <string name="emptyView_mode_desc_retry">点击重试</string>
    <string name="im">消息</string>
    <string name="filter">筛选</string>
    <string name="homework_all">全部</string>
    <string name="homework_teacher">老师</string>
    <string name="homework_category_1">待完成</string>
    <string name="homework_category_2">待批|待校</string>
    <string name="homework_category_3">已批|已校</string>
    <string name="homework_category_4">待订</string>
    <string name="homework_parent">家长</string>
    <string name="hw_parent">家长作业</string>
    <string name="hw_time_start">开始时间：</string>
    <string name="hw_time_end">截至时间：</string>
    <string name="hw_content">作业描述：</string>
    <string name="hw_avg_all">平均用时：</string>
    <string name="hw_avg_me">本人用时：</string>
    <string name="hw_score">我的得分：</string>
    <string name="null_data">没有数据</string>
    <string name="homework_detail">作业详情</string>
    <string name="mine_change_pd">修改密码</string>
    <string name="mine_pd_old">请输入旧密码:</string>
    <string name="mine_pd_new_2">请确认新密码:</string>
    <string name="mine_pd_new_1">请输入新密码:</string>
    <string name="old_pd_error">旧密码输入错误，请重新输入</string>
    <string name="twice_diff">两次输入的密码不同</string>
    <string name="count_subject_hand">科目完成率</string>
    <string name="count_subject_right">学科正确率</string>
    <string name="count_hw_right">作业正确率</string>
    <string name="count_know_right">知识点正确率</string>
    <string name="preview">预览</string>
    <string name="assign_choice">选择试题</string>
    <string name="assign_tip">知识点不选，默认为全部</string>
    <string name="input_press">按住说话</string>
    <string name="send">发送</string>
    <string name="send_failed">消息发送失败,请重试！</string>
    <string name="permission_re">课上课下需要存储、相机和麦克风权限来进行正常的工作，请允许这些权限的申请</string>
    <string name="filepath">com.sjkj.parent.fileprovider</string>
    <string name="modify_head_error">头像修改失败，请重试！</string>
    <string name="email_regex">请输入正确的邮箱格式</string>
    <string name="tel_regex">请输入正确的电话格式</string>
    <string name="modify_head_success">头像修改成功</string>
    <string name="modify_name_success">昵称修改成功</string>
    <string name="modify_tel_success">电话修改成功</string>
    <string name="modify_qq_success">QQ修改成功</string>
    <string name="modify_email_success">邮箱修改成功</string>
    <string name="modify_name_error">昵称修改失败，请重试！</string>
    <string name="modify_tel_error">电话修改失败，请重试！</string>
    <string name="modify_qq_error">QQ修改失败，请重试！</string>
    <string name="modify_email_error">邮箱修改失败，请重试！</string>
    <string name="mine_content">通知内容</string>
    <string name="exit_login">退出登陆</string>
    <string name="img_save_error">图片保存失败，请重试！</string>
    <string name="next_page">下一页</string>
    <string name="pre">A</string>
    <string name="hand_writing">图片编辑</string>
    <string name="img">相册</string>
    <string name="brush">写字板</string>
    <string name="file">文件</string>
    <string name="brushe_tip">你的作画还未保存，是否返回？</string>
    <string name="picture">拍照</string>
    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="voice_failure">录音失败！</string>
    <string name="send_audio_fail">发送语音失败，文件长度为0或语音权限没有开启</string>
    <string name="empty_directory_hint">无可选文件</string>
    <string name="action_close">关</string>
    <string name="type_archive">压缩包</string>
    <string name="type_certificate">证书</string>
    <string name="type_directory">目录</string>
    <string name="type_document">文件</string>
    <string name="type_drawing">图片</string>
    <string name="type_excel">EXCEL</string>
    <string name="type_image">照片</string>
    <string name="type_music">音乐</string>
    <string name="type_pdf">PDF</string>
    <string name="type_power_point">PPT</string>
    <string name="type_word">WORD</string>
    <string name="type_apk">APK</string>
    <string name="type_video">视频</string>
    <string name="choose_file">选择文件</string>
    <string name="send_file_or">是否发送选中的文件？</string>
    <string name="sending">发送中…</string>
    <string name="send_ing_or">正在发送中，是否取消发送？</string>
    <string name="assign_hw_check">请先选择试题</string>
    <string name="hw_name">作业名称：</string>
    <string name="hw_check_tye">作业批改：</string>
    <string name="hw_revise_type">订正批改：</string>
    <string name="open_failed">文件打开失败，请重试！</string>
</resources>
