<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_press_true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/mine_pd_old"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mine_pd_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mine_pd_old"
                android:imeActionLabel="@string/next"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:nextFocusForward="@id/tv_password"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/Line"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/mine_pd_new_1"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mine_pd_new_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mine_pd_new_1"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_login"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusForward="@id/mine_pd_new_2"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/Line"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/mine_pd_new_2"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mine_pd_new_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mine_pd_new_2"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/mine_confirm"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selecotr_bt_bg"
        android:padding="10dp"
        android:text="@string/dialog_confirm"
        android:textColor="@color/color_green_gray"
        android:textStyle="bold" />

</LinearLayout>
