<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw_name"
            android:textColor="@color/app_color_blue"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/tv_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:singleLine="true"
            android:textColor="@color/qmui_config_color_75_pure_black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw_check_tye"
            android:textColor="@color/app_color_blue"
            android:textSize="14sp" />

        <com.sjkj.parent.ui.view.SwitchMultiButton
            android:id="@+id/hw_switch_button_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            app:selectedColor="@color/colorPrimary"
            app:strokeRadius="10dp"
            app:switchTabs="@array/homework_check_type"
            app:switchTextSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        style="@style/Line"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/ll_revise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw_revise_type"
            android:textColor="@color/app_color_blue"
            android:textSize="14sp" />

        <com.sjkj.parent.ui.view.SwitchMultiButton
            android:id="@+id/hw_switch_button_revise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            app:selectedColor="@color/colorPrimary"
            app:strokeRadius="10dp"
            app:switchTabs="@array/homework_revise_type"
            app:switchTextSize="14sp" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw_time_start"
            android:textColor="@color/app_color_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selecotr_bt_bg"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/color_green_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hw_time_end"
            android:textColor="@color/app_color_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selecotr_bt_bg"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/color_green_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/selecotr_bt_bg"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_cancle"
            android:textColor="@color/color_green_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/selecotr_bt_bg"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/dialog_confirm"
            android:textColor="@color/color_green_gray"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
