<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/view_chat_voice"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_cheat_voice" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/view_chat_input_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableBottom="@drawable/selector_edit_focus"
                android:hint="@null"
                android:paddingBottom="5dp" />

            <TextView
                android:id="@+id/view_chat_input_tv"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_voice"
                android:gravity="center"
                android:text="@string/input_press"
                android:textColor="@color/qmui_config_color_75_pure_black"
                android:textSize="14sp"
                android:visibility="gone" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/view_chat_add"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_cheat_add" />

        <Button
            android:id="@+id/view_chat_send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/shape_session_btn_send"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/plug"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/view_chat_img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/selector_voice"
                app:srcCompat="@drawable/ic_img"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/img"
                android:textColor="@color/qmui_config_color_75_pure_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/selector_voice"
                app:srcCompat="@drawable/ic_img"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/plig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/img"
                android:textColor="@color/qmui_config_color_75_pure_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/view_chat_brush"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/selector_voice"
                app:srcCompat="@drawable/ic_brush_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brush"
                android:textColor="@color/qmui_config_color_75_pure_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/view_chat_file"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/selector_voice"
                app:srcCompat="@drawable/ic_folder"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file"
                android:textColor="@color/qmui_config_color_75_pure_black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
